dynamix/force-app/main/default/objects/communicat_o__Template_Argument__mdt/communicat_o__Template_Argument__mdt.object-meta.xml
<CustomObject>
    <label>Template Argument</label>
    <pluralLabel>Template Arguments</pluralLabel>
</CustomObject>