dynamix/force-app/main/default/objects/communicat_o__Template_Argument__mdt/fields/communicat_o__Argument_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Argument_Type__c</fullName>
    <label>Argument Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>