dynamix/force-app/main/default/objects/communicat_o__Template_Argument__mdt/fields/communicat_o__External_Argument_Reference__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__External_Argument_Reference__c</fullName>
    <label>External Argument Reference</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>