dynamix/force-app/main/default/objects/communicat_o__Template_Argument__mdt/fields/communicat_o__Registered_Template__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Registered_Template__c</fullName>
    <label>Registered Template</label>
    <referenceTo>communicat_o__Registered_Template__mdt</referenceTo>
    <relationshipLabel>Template Arguments</relationshipLabel>
    <relationshipName>Template_Arguments</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>