dynamix/force-app/main/default/objects/communicat_o__Template_Argument__mdt/fields/communicat_o__Value__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>